--- a/src/java/dbHelpers/dbConn.properties
+++ b/src/java/dbHelpers/dbConn.properties
@@ -1,5 +1,5 @@
 #Oracle DB Properties
 driver.name = oracle.jdbc.OracleDriver
-server.name = jdbc:oracle:thin:@HW4.cloudapp.net:1521:delphi
+server.name = jdbc:oracle:thin:@biz-delphi.cloudapp.net:1521:Delphi
 user.name = MS3200089
 user.password=Target#04
